# gpu-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  example.py  gpu_simulator  requirements.txt  setup.py
experiments/: GPU_reproduction.py  GPU_reproduction_fp8.py  __init__.py  find_all_neutral_subgroups.py  tensor_cores_mma.py
experiments/wgmma_e4m3/: fp8_e4m3_wgmma.cu  fp8_e4m3_wgmma_ext.cpp  setup.py
expirements/: GPU_reproduction.py  tensor_cores_mma.py
include/: Ampere_simulator.h  Custom_simulator.h  Hopper_fp8_simulator.h  Hopper_simulator.h  gfloat.h
src/: Ampere_simulator.cpp  Custom_simulator.cpp  Hopper_fp8_simulator.cpp  Hopper_simulator.cpp  gfloat.cpp  main.cpp  pybind_wrapper.cpp
tests/: README.md  __init__.py  conftest.py  test_gpu_reproduction.py
utils/: utils.cpp  utils.h
